# AlgorithmEx

./: .ghci  .gitignore  AlgorithmEx.cabal  LICENSE  stack.yaml
app/: Main.hs
src/: Course.hs
src/Course/: CS15210.hs  DataTypes.hs  EX1Graph.hs  PA1.hs  PA2.hs  PA3.hs  PA4.hs  _.swp  test.txt
src/Course/assets/: PA2.md
test/: Spec.hs
