name:                AlgorithmEx
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/niexshao/AlgorithmEx#readme
license:             BSD3
license-file:        LICENSE
author:              Xi Nie
maintainer:          xi.nie@outlook.com
copyright:           Copyright: (c) 2016 xi nie
category:            Self-Usage
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Course
                     , Course.PA1
                     , Course.PA2
                     , Course.PA3
                     , Course.PA4
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
                     , data-memocombinators
  default-language:    Haskell2010

executable AlgorithmEx-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AlgorithmEx
  default-language:    Haskell2010

test-suite AlgorithmEx-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AlgorithmEx
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/niexshao/AlgorithmEx
